--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,16 +12,17 @@ readme = "README.md"
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "3.7"
+python = "<3.8,>=3.6.1"
 python-git-info = "^0.6.1"
 seaborn = "^0.10.1"
 hydra-core = "^0.11.3"
 matplotlib = "^3.2.1"
 pandas = "^1.0.4"
 numpy = "^1.18.5"
-hp-transfer-benchmarks = { path = "../ht_benchmarks/" }
-hp-transfer-optimizers = { path = "../ht_optimizer/" }
+hp-transfer-benchmarks = { path = "../ht_benchmarks/", develop = true }
+hp-transfer-optimizers = { path = "../ht_optimizers/", develop = true }
 proplot = "^0.6.4"
+lockfile = "^0.12.2"
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0"
