--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ hp-transfer-benchmarks = { path = "../ht_benchmarks/", develop = true }
 hp-transfer-optimizers = { path = "../ht_optimizers/", develop = true }
 proplot = "^0.6.4"
 lockfile = "^0.12.2"
+pyDOE = "^0.3.8"
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0"
