add fcnet gp reference loss

--- a/hp_transfer_aa_experiments/reference_losses.yaml
+++ b/hp_transfer_aa_experiments/reference_losses.yaml
@@ -1,15 +1,60 @@
+fcnet_aa:
+  naval:
+    a:
+      2:
+        10_loss: 0.010324010881449795
+        20_loss: 0.0022105922090122476
+        40_loss: 0.0007412193428899627
+    b:
+      2:
+        10_loss: 0.0028008442480131636
+        20_loss: 0.0003248810559489357
+        40_loss: 8.585682709963294e-05
+  parkinson:
+    a:
+      2:
+        10_loss: 0.028729812102392317
+        20_loss: 0.02078895696438849
+        40_loss: 0.016030113818123935
+    b:
+      2:
+        10_loss: 0.028428531531244517
+        20_loss: 0.01864716923329979
+        40_loss: 0.011426754682324826
+  protein:
+    a:
+      2:
+        10_loss: 0.26651920229196546
+        20_loss: 0.24460840970277786
+        40_loss: 0.23692261710762977
+    b:
+      2:
+        10_loss: 0.29310645803809166
+        20_loss: 0.2581519377231598
+        40_loss: 0.22885265409946443
+  slice:
+    a:
+      2:
+        10_loss: 0.002434223106247373
+        20_loss: 0.0011999643524177373
+        40_loss: 0.0007626076799351722
+    b:
+      2:
+        10_loss: 0.0013482975019724107
+        20_loss: 0.0006751017409260385
+        40_loss: 0.00040741749908193017
 nas:
   ImageNet16-120:
     a:
       2:
-        10_loss: 44.7290221914524
-        20_loss: 40.77531970831163
-        40_loss: 36.160329596239286
+        10_loss: 44.72902219145239
+        20_loss: 40.77531970831161
+        40_loss: 36.16032959623927
     b:
       2:
-        10_loss: 44.76408701236284
-        20_loss: 40.80295319550393
-        40_loss: 36.07803779221099
+        10_loss: 44.764087012362815
+        20_loss: 40.80295319550392
+        40_loss: 36.078037792211
   cifar10:
     a:
       2:
@@ -24,12 +69,12 @@ nas:
   cifar100:
     a:
       2:
-        10_loss: 1.7988999999999993
+        10_loss: 1.7989
         20_loss: 0.8781533333333325
         40_loss: 0.4599266666666662
     b:
       2:
-        10_loss: 2.0162666666666667
+        10_loss: 2.016266666666668
         20_loss: 0.8787666666666665
         40_loss: 0.46356666666666585
 svm_aa:
@@ -37,17 +82,17 @@ svm_aa:
     a:
       2:
         10_loss: 0.13191668
-        20_loss: 0.0361986
+        20_loss: 0.036198600000000004
         40_loss: 0.00112636
     b:
       2:
-        10_loss: 0.36581368999999997
-        20_loss: 0.3166335699999999
-        40_loss: 0.26344481999999997
+        10_loss: 0.3658136900000002
+        20_loss: 0.31663357
+        40_loss: 0.2634448200000001
   '1':
     a:
       2:
-        10_loss: 0.00022719000000000003
+        10_loss: 0.00022719
         20_loss: 0.0
         40_loss: 0.0
     b:
@@ -58,9 +103,9 @@ svm_aa:
   '2':
     a:
       2:
-        10_loss: 0.26544862
-        20_loss: 0.25275093000000004
-        40_loss: 0.2477118799999999
+        10_loss: 0.26544862000000014
+        20_loss: 0.25275093000000015
+        40_loss: 0.24771188000000016
     b:
       2:
         10_loss: 0.16892105000000002
@@ -80,142 +125,142 @@ svm_aa:
   '4':
     a:
       2:
-        10_loss: 0.09309757999999999
-        20_loss: 0.08716397000000001
-        40_loss: 0.08548722
+        10_loss: 0.09309757999999997
+        20_loss: 0.08716396999999997
+        40_loss: 0.08548721999999995
     b:
       2:
-        10_loss: 0.07435635000000003
-        20_loss: 0.07346118
+        10_loss: 0.07435635000000002
+        20_loss: 0.07346117999999997
         40_loss: 0.07330315
   '5':
     a:
       2:
         10_loss: 0.009127540000000002
-        20_loss: 0.008783039999999999
-        40_loss: 0.008762679999999991
+        20_loss: 0.008783039999999997
+        40_loss: 0.008762679999999993
     b:
       2:
         10_loss: 0.009704449999999998
-        20_loss: 0.009338989999999997
-        40_loss: 0.009301029999999993
+        20_loss: 0.009338989999999998
+        40_loss: 0.009301029999999995
   '6':
     a:
       2:
-        10_loss: 0.31433517
-        20_loss: 0.29738376
+        10_loss: 0.31433517000000005
+        20_loss: 0.2973837600000002
         40_loss: 0.2935616300000002
     b:
       2:
-        10_loss: 0.19496517000000005
+        10_loss: 0.19496516999999994
         20_loss: 0.19227544
         40_loss: 0.19170492999999997
   '7':
     a:
       2:
-        10_loss: 0.08535733999999998
-        20_loss: 0.08055178
-        40_loss: 0.08019433000000001
+        10_loss: 0.08535733999999996
+        20_loss: 0.08055178000000003
+        40_loss: 0.08019433000000004
     b:
       2:
-        10_loss: 0.11376011999999999
-        20_loss: 0.10208293999999997
+        10_loss: 0.11376011999999992
+        20_loss: 0.10208293999999993
         40_loss: 0.09579951999999997
   '8':
     a:
       2:
-        10_loss: 0.17674362
-        20_loss: 0.17440542999999994
-        40_loss: 0.17372719999999994
+        10_loss: 0.17674362000000005
+        20_loss: 0.17440543000000003
+        40_loss: 0.17372719999999986
     b:
       2:
-        10_loss: 0.10889125000000005
-        20_loss: 0.10679909999999997
-        40_loss: 0.10661866999999992
+        10_loss: 0.10889124999999998
+        20_loss: 0.1067991
+        40_loss: 0.10661866999999994
   '9':
     a:
       2:
-        10_loss: 0.3966610800000001
-        20_loss: 0.3805485800000002
-        40_loss: 0.3714628500000003
+        10_loss: 0.39666107999999994
+        20_loss: 0.38054858
+        40_loss: 0.37146285000000007
     b:
       2:
         10_loss: 0.15007314000000002
-        20_loss: 0.09667025999999997
-        40_loss: 0.08771279999999995
+        20_loss: 0.09667026
+        40_loss: 0.08771280000000001
 xgb_aa:
   '0':
     a:
       2:
-        10_loss: 0.08749219000000003
-        20_loss: 0.016194790000000004
-        40_loss: 0.00023071000000000007
+        10_loss: 0.08749219
+        20_loss: 0.016194789999999997
+        40_loss: 0.00023071000000000005
     b:
       2:
-        10_loss: 0.09507916000000004
-        20_loss: 0.033516409999999996
-        40_loss: 0.002916410000000001
+        10_loss: 0.09507916
+        20_loss: 0.03351640999999998
+        40_loss: 0.0029164100000000004
   '1':
     a:
       2:
-        10_loss: 0.012026450000000001
-        20_loss: 0.0016705200000000004
-        40_loss: 0.00024050999999999999
+        10_loss: 0.012026450000000006
+        20_loss: 0.00167052
+        40_loss: 0.00024051000000000007
     b:
       2:
         10_loss: 0.0055451499999999996
-        20_loss: 0.0025605499999999987
-        40_loss: 0.0018694
+        20_loss: 0.00256055
+        40_loss: 0.0018693999999999996
   '2':
     a:
       2:
-        10_loss: 0.17903401999999996
+        10_loss: 0.17903402
         20_loss: 0.17632008000000002
-        40_loss: 0.17491208000000008
+        40_loss: 0.17491208
     b:
       2:
         10_loss: 0.16669441999999995
-        20_loss: 0.16410231000000003
-        40_loss: 0.16250874999999998
+        20_loss: 0.16410231000000006
+        40_loss: 0.16250875
   '3':
     a:
       2:
-        10_loss: 0.012735459999999999
+        10_loss: 0.01273546
         20_loss: 0.0005162599999999999
         40_loss: 0.0
     b:
       2:
-        10_loss: 0.02830281
-        20_loss: 0.005076299999999999
-        40_loss: 3.1790000000000006e-05
+        10_loss: 0.028302809999999998
+        20_loss: 0.005076300000000001
+        40_loss: 3.179e-05
   '4':
     a:
       2:
-        10_loss: 0.07815668999999999
-        20_loss: 0.07226033999999999
-        40_loss: 0.06952105
+        10_loss: 0.07815669
+        20_loss: 0.07226034000000002
+        40_loss: 0.06952104999999997
     b:
       2:
-        10_loss: 0.07648306000000002
-        20_loss: 0.07478338999999996
-        40_loss: 0.07424332
+        10_loss: 0.07648306
+        20_loss: 0.07478338999999998
+        40_loss: 0.07424331999999996
   '5':
     a:
       2:
-        10_loss: 0.0044456800000000005
-        20_loss: 0.0040298800000000004
-        40_loss: 0.0038358400000000005
+        10_loss: 0.004445680000000002
+        20_loss: 0.004029880000000002
+        40_loss: 0.003835840000000002
     b:
       2:
-        10_loss: 0.0048826100000000025
-        20_loss: 0.00418996
-        40_loss: 0.003986110000000002
+        10_loss: 0.004882610000000001
+        20_loss: 0.004189960000000001
+        40_loss: 0.00398611
   '6':
     a:
       2:
-        10_loss: 0.17648455999999998
-        20_loss: 0.16722216000000006
-        40_loss: 0.16114267000000002
+        10_loss: 0.1764845600000001
+        20_loss: 0.16722216000000004
+        40_loss: 0.16114266999999993
     b:
       2:
         10_loss: 0.17830901000000002
@@ -224,33 +269,33 @@ xgb_aa:
   '7':
     a:
       2:
-        10_loss: 0.06967735999999998
-        20_loss: 0.06690147999999997
-        40_loss: 0.06533217
+        10_loss: 0.06967736
+        20_loss: 0.06690148000000001
+        40_loss: 0.06533217000000002
     b:
       2:
         10_loss: 0.06944217999999999
-        20_loss: 0.06624724999999998
-        40_loss: 0.06509996
+        20_loss: 0.06624725
+        40_loss: 0.06509995999999997
   '8':
     a:
       2:
-        10_loss: 0.10200659999999998
+        10_loss: 0.10200660000000003
         20_loss: 0.09916425000000004
         40_loss: 0.09784406000000002
     b:
       2:
-        10_loss: 0.10363193000000002
-        20_loss: 0.10223771
-        40_loss: 0.10141845
+        10_loss: 0.10363193000000001
+        20_loss: 0.10223771000000002
+        40_loss: 0.10141844999999998
   '9':
     a:
       2:
-        10_loss: 0.3625923400000002
-        20_loss: 0.33541451999999994
-        40_loss: 0.3133096799999999
+        10_loss: 0.36259234
+        20_loss: 0.33541452000000005
+        40_loss: 0.3133096800000001
     b:
       2:
-        10_loss: 0.12661211
-        20_loss: 0.10086816000000001
-        40_loss: 0.09644137000000003
+        10_loss: 0.12661211000000003
+        20_loss: 0.10086816000000003
+        40_loss: 0.09644137000000001
