--- a/hp_transfer_aa_experiments/configs/hydra/job_logging/bohb.yaml
+++ b/hp_transfer_aa_experiments/configs/hydra/job_logging/bohb.yaml
@@ -1,19 +1,18 @@
-hydra:
-  job_logging:
-    version: 1
-    disable_existing_loggers: False
+# @package _group_
+version: 1
+disable_existing_loggers: False
 
-    formatters:
-      standard:
-        format: "%(asctime)s %(name)s [%(levelname)s]: %(message)s"
-        datefmt: "%Y-%m-%d %H:%M:%S"
+formatters:
+  standard:
+    format: "%(asctime)s %(name)s [%(levelname)s]: %(message)s"
+    datefmt: "%Y-%m-%d %H:%M:%S"
 
-    handlers:
-      full_file:
-        filename: full.log
-        class: logging.FileHandler
-        formatter: standard
+handlers:
+  full_file:
+    filename: full.log
+    class: logging.FileHandler
+    formatter: standard
 
-    root:
-     level: INFO
-     handlers: [full_file]
+root:
+ level: INFO
+ handlers: [full_file]
