--- a/hp_transfer_aa_experiments/configs/runtype/eval_ref_10.yaml
+++ b/hp_transfer_aa_experiments/configs/runtype/eval_ref_10.yaml
@@ -1,5 +1,5 @@
-runtype:
-  meta_eval_interval: -1
-  dim_factor: 40
-  dim_factor_pre_adjustment: 10
-  type: eval_reference
+# @package _group_
+meta_eval_interval: -1
+dim_factor: 40
+dim_factor_pre_adjustment: 10
+type: eval_reference
