--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ hp-transfer-optimizers = { path = "../ht_optimizers/", develop = true }
 proplot = "^0.6.4"
 lockfile = "^0.12.2"
 pyDOE = "^0.3.8"
+hydra-submitit-launcher = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0"
