--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["poetry>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
 [tool.poetry]
 name = "hp_transfer_aa_experiments"
 version = "0.2.0"
@@ -11,13 +7,13 @@ readme = "README.md"
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "<3.8,>=3.6.1"
+python = ">=3.7,<3.8"  # <3.8 comes from HPOBench
 python-git-info = "^0.6.1"
 seaborn = "^0.10.1"
 hydra-core = "^1.0.0"
 matplotlib = "^3.2.1"
 pandas = "^1.0.4"
-numpy = "^1.18.5"
+numpy = "^1.20.0"
 hp-transfer-benchmarks = { path = "../ht_benchmarks/", develop = true }
 hp-transfer-optimizers = { path = "../ht_optimizers/", develop = true }
 proplot = "^0.6.4"
@@ -27,10 +23,10 @@ hydra-script-launcher = {git = "https://github.com/DaStoll/hydra_script_launcher
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0"
-pre-commit = "^1.20"
-black = "^19.10b0"
-isort = "^4.3"
-pylint = {git = "https://github.com/PyCQA/pylint.git", rev = "3649312233b39a74b4f631bae1e242f5bc7bde2c"}
+pre-commit = "^2.10"
+black = "20.8b1"
+isort = "^5.7"
+pylint = "^2.6"
 
 [tool.black]
 line-length = 90
@@ -49,7 +45,7 @@ lines_between_types = 1
 not_skip = "__init__.py"
 filter_files = true
 
-[tool.pylint.messages_control]
+[tool.pylint.messages_control]  # Can use lists now, maybe update in future
 disable = """
 all
 """
@@ -69,6 +65,7 @@ dangerous-default-value,duplicate-key,useless-else-on-loop,expression-not-assign
 unnecessary-lambda,pointless-statement,unnecessary-pass,unreachable,eval-used,exec-used,using-constant-test,
 deprecated-lambda,blacklisted-name,misplaced-comparison-constant,singleton-comparison,unneeded-not,
 consider-iterating-dictionary,consider-using-enumerate,empty-docstring,unidiomatic-typecheck,
+condition-evals-to-constant,
 # ------------------------------------
 # Async
 # ------------------------------------
@@ -107,7 +104,7 @@ undefined-loop-variable,global-statement,global-at-module-level,
 format-needs-mapping,truncated-format-string,missing-format-string-key,mixed-format-string,too-few-format-args,
 bad-str-strip-call,too-many-format-args,bad-format-character,format-combined-specification,bad-format-string-key,
 bad-format-string,missing-format-attribute,missing-format-argument-key,unused-format-string-argument,
-unused-format-string-key,invalid-format-index,
+unused-format-string-key,invalid-format-index,f-string-without-interpolation
 # ------------------------------------
 # String Constant
 # ------------------------------------
@@ -127,8 +124,8 @@ not-an-iterable,not-a-mapping,
 # -----------------------------------
 # Format
 # -----------------------------------
-bad-indentation,mixed-indentation,unnecessary-semicolon,bad-whitespace,missing-final-newline,mixed-line-endings,
-multiple-statements,trailing-newlines,trailing-whitespace,unexpected-line-ending-format,superfluous-parens,
+bad-indentation,unnecessary-semicolon,missing-final-newline,mixed-line-endings,multiple-statements,trailing-newlines,
+trailing-whitespace,unexpected-line-ending-format,superfluous-parens,
 # ------------------------------------
 # Classes
 # ------------------------------------
@@ -137,5 +134,11 @@ invalid-slots,invalid-slots-object,no-method-argument,no-self-argument,unexpecte
 non-iterator-returned,invalid-length-returned,protected-access,attribute-defined-outside-init,abstract-method,
 bad-staticmethod-argument,non-parent-init-called,super-init-not-called,no-classmethod-decorator,
 no-staticmethod-decorator,no-self-use,bad-classmethod-argument,bad-mcs-classmethod-argument,bad-mcs-method-argument,
-method-check-failed,
+method-check-failed,invalid-bool-returned,invalid-index-returned,invalid-repr-returned,invalid-str-returned,
+invalid-bytes-returned,invalid-hash-returned,invalid-length-hint-returned,invalid-format-returned,
+invalid-getnewargs-returned,invalid-getnewargs-ex-returned,super-with-arguments
 """
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
