update hydra and hydra-script-launcher

--- a/hp_transfer_aa_experiments/configs/run.yaml
+++ b/hp_transfer_aa_experiments/configs/run.yaml
@@ -1,8 +1,9 @@
 defaults:
-  - hydra/job_logging: bohb_full
   - benchmark: fcnet
   - approach: gp
   - runtype: eval_dim
+  - _self_
+  - override hydra/job_logging: bohb_full
 
 experiment_group: test
 experiment_name: test_${run_id}
