--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ license = "MIT"
 python = ">=3.7,<3.8"  # <3.8 comes from HPOBench
 python-git-info = "^0.6.1"
 seaborn = "^0.10.1"
-hydra-core = "^1.0.0"
+hydra-core = "^1.1.0"
 matplotlib = "^3.2.1"
 pandas = "^1.0.4"
 numpy = "^1.20.0"
@@ -20,6 +20,11 @@ proplot = "^0.6.4"
 lockfile = "^0.12.2"
 pyDOE = "^0.3.8"
 hydra-script-launcher = {git = "https://github.com/DaStoll/hydra_script_launcher.git"}
+"oslo.concurrency" = "^4.4.1"
+lazy-import = "^0.2.2"
+psutil = "^5.8.0"
+pynisher = "^0.6.4"
+sobol-seq = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0"
