--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ psutil = "^5.8.0"
 pynisher = "^0.6.4"
 sobol-seq = "^0.2.0"
 scikit-learn = "^0.22.0"
+pyupgrade = "^2.29.0"
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0"
